--- a/polybar-scripts/salah-time/README.org
+++ b/polybar-scripts/salah-time/README.org
@@ -3,7 +3,7 @@
 * Salah Time
 This is a simple module showing the remaining time for the next salah.
 ** Configuration
-Enter your country name, city name, and the username of your pc for home directory
+Enter your country name, city name.
 
 [[./Screenshots/code.png]]
 
