--- a/polybar-scripts/salah-time/README.org
+++ b/polybar-scripts/salah-time/README.org
@@ -1,6 +1,6 @@
-#+TITLE: Readme
+#+TITLE: Salah Time Script
 
-* Salah Time
+* About
 This is a simple module showing the remaining time for the next salah.
 ** Configuration
 Enter your country name, city name.
@@ -13,9 +13,24 @@ Optionally you can use any icon or colors you want.
 ** Screenshots
 [[./Screenshots/isha.png]]
 ** Module
-#+begin_src config
+#+begin_src
 [module/salah-time]
 type = custom/script
 exec = ~/polybar-scripts/salah-time.py
 interval = 60
+#+end_src
+** Additional formatting
+Use these fonts for the icons
+#+begin_src
+font-1 = "FontAwesome:size=10;0"
+font-2 = "FontAwesome5Free:style=Solid:size=11;0"
+#+end_src
+#+begin_src
+label-maxlen = 20
+format-padding = 1
+format-prefix = " "
+format-prefix-foreground = #00ff00
+format-background = ${colors.background}
+format-foreground = ${colors.foreground}
+format-underline = #00ff00
 #+end_src
