--- a/polybar-scripts/salah-time/README.org
+++ b/polybar-scripts/salah-time/README.org
@@ -13,7 +13,7 @@ Optionally you can use any icon or colors you want.
 ** Screenshots
 [[./Screenshots/isha.png]]
 ** Module
-#+begin_src
+#+begin_src conf
 [module/salah-time]
 type = custom/script
 exec = ~/polybar-scripts/salah-time.py
@@ -21,11 +21,11 @@ interval = 60
 #+end_src
 ** Additional formatting
 Use these fonts for the icons
-#+begin_src
+#+begin_src conf
 font-1 = "FontAwesome:size=10;0"
 font-2 = "FontAwesome5Free:style=Solid:size=11;0"
 #+end_src
-#+begin_src
+#+begin_src conf
 label-maxlen = 20
 format-padding = 1
 format-prefix = " "
